WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156233
Render tree teardown should be iterative
https://bugs.webkit.org/show_bug.cgi?id=156233
Summary
Render tree teardown should be iterative
Antti Koivisto
Reported
2016-04-05 06:38:35 PDT
Use ComposedTreeIterator.
Attachments
patch
(14.42 KB, patch)
2016-04-05 06:48 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-04-05 06:48:49 PDT
Created
attachment 275659
[details]
patch
WebKit Commit Bot
Comment 2
2016-04-05 06:51:39 PDT
Attachment 275659
[details]
did not pass style-queue: ERROR: Source/WebCore/style/RenderTreeUpdater.cpp:515: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebCore/style/RenderTreeUpdater.cpp:527: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3
2016-04-05 08:04:40 PDT
https://trac.webkit.org/r199056
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug