Source/WebCore/style/StyleTreeResolver.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2013-2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -107,10 +107,6 @@ private:
 
     std::unique_ptr<Update> m_update;
 };
-
-enum DetachType { NormalDetach, ReattachDetach };
-void detachRenderTree(Element&, DetachType = NormalDetach);
-void detachTextRenderer(Text&);
 
 void queuePostResolutionCallback(std::function<void ()>);
 bool postResolutionCallbacksAreSuspended();
